<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_9"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lv_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/dp_82"
            android:layout_height="@dimen/dp_82"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_50"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/tv_huancun"
            style="@style/MenuStyle"
            android:drawableLeft="@drawable/downloads"
            android:text="@string/collection" />

        <TextView
            android:id="@+id/tv_jilu"
            style="@style/MenuStyle"
            android:drawableLeft="@drawable/history"
            android:text="@string/download"
            />

        <TextView
            android:id="@+id/tv_dianying"
            style="@style/MenuStyle"
            android:drawableLeft="@drawable/movie"
            android:text="@string/fuli" />

        <TextView
            android:id="@+id/tv_fenxiang"
            style="@style/MenuStyle"
            android:drawableLeft="@drawable/share"
            android:text="@string/share" />

        <TextView
            android:id="@+id/tv_gengduo"
            style="@style/MenuStyle"
            android:drawableLeft="@drawable/more"
            android:text="@string/feedback" />


        <RelativeLayout
            android:id="@+id/weather_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_50"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/weather_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="@dimen/dp_6"
                android:background="@drawable/weather" />

            <TextView
                android:id="@+id/qiwen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/weather_iv"
                android:gravity="center"
                android:text="23°"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/shiqu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qiwen"
                android:layout_toRightOf="@+id/weather_iv"
                android:gravity="center"
                android:text="北京市"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:drawableLeft="@drawable/about"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/colorWright"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_toRightOf="@id/about"
            android:drawableLeft="@drawable/them"
            android:text="@string/them"
            android:textColor="@color/colorWright"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>
</RelativeLayout>